src/objects/Integration_Application__c.object
<CustomObject>
    <description>Tracks funding requests from app integrators. Requested by Stephen Maeder</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Applications</relationshipLabel>
        <relationshipName>Integration_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Funded_to_Date__c</fullName>
        <label>Amount Funded to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Store_Launch_Date__c</fullName>
        <label>App Store Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_Store_URL__c</fullName>
        <label>App Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Application_Timestamp__c</fullName>
        <label>Application Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Funding_Amount__c</fullName>
        <label>Approved Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Big_Name_Player__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Big Name Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bigcommerce_API_Supports_Integration__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Bigcommerce API Supports Integration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Association_Co_Marketing_Opp__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Brand Association / Co-Marketing Opp</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Cost_Estimate__c</fullName>
        <label>Build Cost Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Build_Cost__c</fullName>
        <inlineHelpText>How much will it cost to build?</inlineHelpText>
        <label>Build Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopping Comparison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Integration Applications</relationshipLabel>
        <relationshipName>Integration_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe your integration</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drives_New_Clients__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Drives New Clients</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frenemy_Threat__c</fullName>
        <inlineHelpText>Enter a number 1-10 with 1 = high threat, 10 = low threat</inlineHelpText>
        <label>Frenemy Threat</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Integrator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you used our API before?</inlineHelpText>
        <label>New Integrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>New Application</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>More Details Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending API Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to Directory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reduces_Churn__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Reduces Churn</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Average__c</fullName>
        <formula>( Solves_Pain_Points__c +  Top_Tier_App_Supported_by_Competitors__c + Frenemy_Threat__c + Brand_Association_Co_Marketing_Opp__c +  Drives_New_Clients__c + Reduces_Churn__c + Bigcommerce_API_Supports_Integration__c) / 7</formula>
        <label>Score Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solves_Pain_Points__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Solves Pain Points</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Final Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined Offer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timephrame__c</fullName>
        <inlineHelpText>How long will it take to build?</inlineHelpText>
        <label>Time Frame</label>
        <picklist>
            <picklistValues>
                <fullName>A few hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Tier_App_Supported_by_Competitors__c</fullName>
        <inlineHelpText>Enter a number 1-10</inlineHelpText>
        <label>Top Tier App Supported by Competitors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <inlineHelpText>Which best describes you?
I want to build an integration for my company&apos;s software/service
I want to build an integration for another company&apos;s software/service</inlineHelpText>
        <label>Usage Type</label>
        <picklist>
            <picklistValues>
                <fullName>My Company&apos;s Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Another Company&apos;s Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>Address of website that will promote and support the integration</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Integration Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Status__c</columns>
        <columns>Approved_Funding_Amount__c</columns>
        <columns>Amount_Funded_to_Date__c</columns>
        <columns>Build_Cost__c</columns>
        <columns>Category__c</columns>
        <columns>Score_Average__c</columns>
        <columns>Application_Timestamp__c</columns>
        <columns>App_Store_URL__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Funding_Apps</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Approved_Funding_Amount__c</columns>
        <columns>Amount_Funded_to_Date__c</columns>
        <columns>Application_Timestamp__c</columns>
        <columns>Build_Cost__c</columns>
        <columns>Category__c</columns>
        <columns>Score_Average__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_Funding_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Approved Funding Apps</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_New_Applications_to_be_Reviewed</fullName>
        <columns>NAME</columns>
        <columns>Application_Timestamp__c</columns>
        <columns>Category__c</columns>
        <columns>Big_Name_Player__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Build_Cost_Estimate__c</columns>
        <columns>Description__c</columns>
        <columns>Timephrame__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Recommendation__c</field>
            <operation>equals</operation>
            <value>New Application</value>
        </filters>
        <label>My New Applications to be Reviewed</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>New_Applications_to_be_Reviewed</fullName>
        <columns>NAME</columns>
        <columns>Application_Timestamp__c</columns>
        <columns>Category__c</columns>
        <columns>Big_Name_Player__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Recommendation__c</columns>
        <columns>Build_Cost_Estimate__c</columns>
        <columns>Description__c</columns>
        <columns>Timephrame__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recommendation__c</field>
            <operation>equals</operation>
            <value>New Application</value>
        </filters>
        <label>All New Applications to be Reviewed</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Integration Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>